add prefs route

--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -1,2 +1,8 @@
 <h1>Zoom Schedule Manager</h1>
+<nav>
+  <ul>
+    <li><LinkTo @route="meetings">Meetings</LinkTo></li>
+    <li><LinkTo @route="preferences">Preferences</LinkTo></li>
+  </ul>
+</nav>
 {{outlet}}
